Improve code quality